# research_gps_activity_extraction

./: .pre-commit-config.yaml  Makefile  pyproject.toml
data/: grid_search_results.csv
notebooks/: 01_data_preparation.ipynb  02_clustering_sctm.ipynb  03_linkage.ipynb  04_grid_search.ipynb  05_results_rendering.ipynb  map_configuration.json
src/: gps_formatting_pipeline.py  path.py
