[tool.poetry]
name = "research-gps-activity-extraction"
version = "0.1.0"
description = ""
authors = ["Adil Rashitov"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
gps-activity = "^0.7.1"
keplergl = "^0.3.2"
autopep8 = "^2.0.2"
pre-commit = "^3.1.1"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-functions = "^0.0.7"
flake8-import-order = "^0.18.2"
jupyter = "^1.0.0"
jupyter-contrib-core = "^0.4.2"
jupyter-contrib-nbextensions = "^0.7.0"
jupyterthemes = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
